--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.6",
     "@types/styled-components": "^5.1.34",
     "next": "14.2.4",
     "react": "^18",
