--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true }]]
+  "plugins": [["styled-components", { "ssr": true }]],
+  "env": {
+    "test": {
+      "plugins": [
+        [
+          "babel-plugin-styled-components",
+          {
+            "ssr": false
+          }
+        ]
+      ]
+    }
+  }
 }
