--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.6",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@types/styled-components": "^5.1.34",
     "next": "14.2.4",
     "react": "^18",
